--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Data.SQL/TOne.WhS.BusinessEntity.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Data.SQL/TOne.WhS.BusinessEntity.Data.SQL.csproj
@@ -93,6 +93,7 @@
     <Compile Include="SupplierZoneDataManager.cs" />
     <Compile Include="SwitchConnectivityDataManager.cs" />
     <Compile Include="SwitchDataManager.cs" />
+    <Compile Include="SwitchReleaseCauseDataManager.cs" />
     <Compile Include="WHSFinancialAccountDataManager.cs" />
     <Compile Include="ZoneServiceConfigDataManager.cs" />
   </ItemGroup>
