--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
@@ -174,6 +174,7 @@
     <Compile Include="SupplierRate\Query\SupplierRateForZoneQuery.cs" />
     <Compile Include="SupplierZone\SupplierZoneServiceToClose.cs" />
     <Compile Include="SupplierZone\SupplierZoneServiceToEdit.cs" />
+    <Compile Include="SwitchReleaseCause\SwitchReleaseCause.cs" />
     <Compile Include="Switch\InsertSwitchOperationOutput.cs" />
     <Compile Include="Switch\UpdateSwitchOperationOutput.cs" />
     <Compile Include="ZoneRoutingProduct\History\SaleEntityZoneRoutingProductHistoryQuery.cs" />
