Adding Classes Needed
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43587

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
@@ -175,6 +175,9 @@
     <Compile Include="SupplierZone\SupplierZoneServiceToClose.cs" />
     <Compile Include="SupplierZone\SupplierZoneServiceToEdit.cs" />
     <Compile Include="SwitchReleaseCause\SwitchReleaseCause.cs" />
+    <Compile Include="SwitchReleaseCause\SwitchReleaseCauseDetail.cs" />
+    <Compile Include="SwitchReleaseCause\SwitchReleaseCauseInfo.cs" />
+    <Compile Include="SwitchReleaseCause\SwitchReleaseCauseQuery.cs" />
     <Compile Include="Switch\InsertSwitchOperationOutput.cs" />
     <Compile Include="Switch\UpdateSwitchOperationOutput.cs" />
     <Compile Include="ZoneRoutingProduct\History\SaleEntityZoneRoutingProductHistoryQuery.cs" />
