--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/TOne.WhS.SupplierPriceList.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/TOne.WhS.SupplierPriceList.Web.csproj
@@ -155,6 +155,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="WhS_SupplierPriceList\Constant\CodeRateMappingEnum.js" />
     <Content Include="WhS_SupplierPriceList\Constant\CodeLayoutEnum.js" />
     <Content Include="WhS_SupplierPriceList\Constant\PreviewGroupedBy.js" />
     <Content Include="WhS_SupplierPriceList\Constant\PreviewChangeTypeEnum.js" />
