--- a/Vanrise/Code/Vanrise.Invoice.BP/Vanrise.Invoice.BP.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.BP/Vanrise.Invoice.BP.csproj
@@ -77,6 +77,12 @@
       <Name>Vanrise.Invoice.BP.Arguments</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <XamlAppDef Include="InvoiceGenerationProcess.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </XamlAppDef>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy /y $(TargetPath) ..\..\..\Output</PostBuildEvent>
