adding security for AccountTelesDIDsAndBusinessTrunksView
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43601

--- a/Retail/Code/Retail.Teles.Business/Retail.Teles.Business.csproj
+++ b/Retail/Code/Retail.Teles.Business/Retail.Teles.Business.csproj
@@ -66,6 +66,10 @@
     <Reference Include="Vanrise.Integration.Entities">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Integration.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Security.Business, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Security.Business.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Security.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Security.Entities.dll</HintPath>
