--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
@@ -251,9 +251,11 @@
     <Content Include="WhS_Sales\Directives\OtherRate\vr-whs-sales-otherrate-grid.js" />
     <Content Include="WhS_Sales\Directives\Preview\vr-whs-sales-salezoneservicepreview-grid.js" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\Templates\PricingTemplateGridTemplate.html" />
+    <Content Include="WhS_Sales\Directives\PricingTemplate\Templates\PricingTemplateRateTemplate.html" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\Templates\PricingTemplateRuleManagementTemplate.html" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\Templates\PricingTemplateZoneFilterTemplate.html" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\vr-whs-sales-pricingtemplate-grid.js" />
+    <Content Include="WhS_Sales\Directives\PricingTemplate\vr-whs-sales-pricingtemplate-rate.js" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\vr-whs-sales-pricingtemplate-zonefilter.js" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\vr-whs-sales-pricingtemplaterule-management.js" />
     <Content Include="WhS_Sales\Directives\SellingRules\Templates\SellingRulesGridTemplate.html" />
