Adding MarginRateCalculation UIs
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43638

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
@@ -212,6 +212,12 @@
     <Content Include="WhS_Sales\Directives\Extensions\BulkAction\ValidationResult\vr-whs-sales-bulkaction-validationresult-rate.js" />
     <Content Include="WhS_Sales\Directives\Extensions\CostCalculation\Templates\WeightedAvgCostCalculation.html" />
     <Content Include="WhS_Sales\Directives\Extensions\CostCalculation\vr-whs-sales-weightedavgcostcalculation.js" />
+    <Content Include="WhS_Sales\Directives\Extensions\PricingTemplate\Templates\CostMarginRateCalculationTemplate.html" />
+    <Content Include="WhS_Sales\Directives\Extensions\PricingTemplate\Templates\RouteOptionMarginRateCalculationTemplate.html" />
+    <Content Include="WhS_Sales\Directives\Extensions\PricingTemplate\Templates\SupplierMarginRateCalculationTemplate.html" />
+    <Content Include="WhS_Sales\Directives\Extensions\PricingTemplate\vr-whs-sales-marginratecalculation-cost.js" />
+    <Content Include="WhS_Sales\Directives\Extensions\PricingTemplate\vr-whs-sales-marginratecalculation-routeoption.js" />
+    <Content Include="WhS_Sales\Directives\Extensions\PricingTemplate\vr-whs-sales-marginratecalculation-supplier.js" />
     <Content Include="WhS_Sales\Directives\Extensions\RateCalculation\Templates\FixedRateCalculationTemplate.html" />
     <Content Include="WhS_Sales\Directives\Extensions\RateCalculation\Templates\MarginRateCalculationTemplate.html" />
     <Content Include="WhS_Sales\Directives\Extensions\RateCalculation\vr-whs-sales-fixedratecalculation.js" />
@@ -250,12 +256,14 @@
     <Content Include="WhS_Sales\Directives\OtherRate\Templates\OtherRateGridTemplate.html" />
     <Content Include="WhS_Sales\Directives\OtherRate\vr-whs-sales-otherrate-grid.js" />
     <Content Include="WhS_Sales\Directives\Preview\vr-whs-sales-salezoneservicepreview-grid.js" />
+    <Content Include="WhS_Sales\Directives\PricingTemplate\Templates\MarginRateCalculationTemplate.html" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\Templates\PricingTemplateGridTemplate.html" />
-    <Content Include="WhS_Sales\Directives\PricingTemplate\Templates\PricingTemplateRateTemplate.html" />
+    <Content Include="WhS_Sales\Directives\PricingTemplate\Templates\PricingTemplateRatesTemplate.html" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\Templates\PricingTemplateRuleManagementTemplate.html" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\Templates\PricingTemplateZoneFilterTemplate.html" />
+    <Content Include="WhS_Sales\Directives\PricingTemplate\vr-whs-sales-pricingtemplate-marginratecalculation.js" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\vr-whs-sales-pricingtemplate-grid.js" />
-    <Content Include="WhS_Sales\Directives\PricingTemplate\vr-whs-sales-pricingtemplate-rate.js" />
+    <Content Include="WhS_Sales\Directives\PricingTemplate\vr-whs-sales-pricingtemplate-rates.js" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\vr-whs-sales-pricingtemplate-zonefilter.js" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\vr-whs-sales-pricingtemplaterule-management.js" />
     <Content Include="WhS_Sales\Directives\SellingRules\Templates\SellingRulesGridTemplate.html" />
