Implementing supplier invoice modifications and adding original invoice data action
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43658

--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Entities/TOne.WhS.Invoice.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Entities/TOne.WhS.Invoice.Entities.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OriginalInvoiceDataInput.cs" />
     <Compile Include="SupplierGenerationCustomSectionPayload.cs" />
     <Compile Include="CustomerGenerationCustomSectionPayload.cs" />
     <Compile Include="CustomerInvoiceDetails.cs" />
