--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Business/TOne.WhS.Invoice.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Business/TOne.WhS.Invoice.Business.csproj
@@ -87,6 +87,7 @@
     <Compile Include="ConfigManager.cs" />
     <Compile Include="Extensions\CarrierPartnerSettings.cs" />
     <Compile Include="Extensions\CompareInvoiceAction.cs" />
+    <Compile Include="Extensions\OriginalInvoiceDataAction.cs" />
     <Compile Include="Extensions\SupplierGenerationCustomSection.cs" />
     <Compile Include="Extensions\CustomerGenerationCustomSection.cs" />
     <Compile Include="Extensions\SupplierInvoiceSettings.cs" />
