--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.BP.Activities/TOne.WhS.CodePreparation.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.BP.Activities/TOne.WhS.CodePreparation.BP.Activities.csproj
@@ -100,6 +100,7 @@
     <Compile Include="ApplyPreviewCodesToDB.cs" />
     <Compile Include="ApplyPreviewZonesToDB.cs" />
     <Compile Include="BackupData.cs" />
+    <Compile Include="GenerateZonesRPsPreview.cs" />
     <Compile Include="LogCustomersToNotify.cs" />
     <Compile Include="PrepareChangedCustomerCountriesForApply.cs" />
     <Compile Include="PrepareExistingEffectiveRates.cs" />
