Applied a bold font style to rows that represent total values
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43666

--- a/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/TOne.WhS.Analytics.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/TOne.WhS.Analytics.Web.csproj
@@ -207,6 +207,7 @@
   <ItemGroup>
     <Content Include="WhS_Analytics\Constant\RealeaseCodeAnalyticDimensionEnum.js" />
     <Content Include="WhS_Analytics\Constant\BillingReportTypeEnum.js" />
+    <Content Include="WhS_Analytics\Constant\VariationReportDimensionSuffixEnum.js" />
     <Content Include="WhS_Analytics\Directives\BillingReports\vr-whs-analytics-billingreporttype-selector.js" />
     <Content Include="WhS_Analytics\Directives\CallStatus\vr-whs-analytics-callstatus-selector.js" />
     <Content Include="WhS_Analytics\Directives\PhoneNumber\vr-whs-analytics-phonenumber-selector.js" />
