--- a/Vanrise/Code/Vanrise.HelperTools/App.config
+++ b/Vanrise/Code/Vanrise.HelperTools/App.config
@@ -12,25 +12,27 @@
     <add key="SQLUsername" value="readonlyUser"/>
     <add key="SQLPassword" value="P@ssw0rd"/>
     <add key="ActiveDBs" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardTOneWhS_BEStructure#StandardTOneWhS_BEStructure_StateBackup#StandardCloudXpointStrcuture#StandardTOneWhS_CDR#StandardTOneWhS_Analytics#StandardMediation_CDRStructure#StandardMediationStructure#StandardRetailStructure#StandardRetail_Analytics#StandardRetail_EDR#StandardRetailStructure_Ringo#StandardXBoosterStructure#StandardXBooster_CDRComparisonOutputStructure#StandardCDRAnalysisStructure#StandardClearVoiceStructure#StandardClearVoiceStructureBI#StandardCarrierPortalStructure"/>
+    <add key="PreventCreateDbScript" value="StandardConfigurationStructure#StandardCloudXpointStrcuture#StandardRetailStructure_Ringo"/>
     
-    <add key="Mediation" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardMediation_CDRStructure#StandardMediationStructure"/>
-    <add key="TOneV2" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardTOneWhS_BEStructure#StandardTOneWhS_BEStructure_StateBackup#StandardTOneWhS_CDR#StandardTOneWhS_Analytics"/>
+    <add key="Mediation" value="StandardMediationStructure#StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardMediation_CDRStructure"/>
+    <add key="TOneV2" value="StandardTOneWhS_BEStructure#StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardTOneWhS_BEStructure_StateBackup#StandardTOneWhS_CDR#StandardTOneWhS_Analytics"/>
     <add key="CloudXPointV2" value="StandardCloudXpointStrcuture"/>
     <add key="INSOFT" value="StandardCloudXpointStrcuture"/>
-    <add key="Retail" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardRetailStructure#StandardRetail_Analytics#StandardRetail_EDR"/>
+    <add key="Retail" value="StandardRetailStructure#StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardRetail_Analytics#StandardRetail_EDR"/>
     <add key="Retail.MultiNet" value=""/>
     <add key="Retail.Ringo" value="StandardRetailStructure_Ringo"/>
     <add key="Retail.Zajil" value=""/>
-    <add key="CarrierPortal" value="StandardConfigurationStructure#StandardLoggingStructure#StandardTransactionStructure#StandardCarrierPortalStructure"/>
+    <add key="CarrierPortal" value="StandardCarrierPortalStructure#StandardConfigurationStructure#StandardLoggingStructure#StandardTransactionStructure"/>
     <add key="CarrierPortal.RingoPortal" value=""/>
     <add key="CarrierPortal.SupplierPricelist" value=""/>
     <add key="CarrierPortal.PartnerPortal" value=""/>
     <add key="BIV2" value="StandardConfigurationStructure#StandardLoggingStructure#StandardTransactionStructure"/>
-    <add key="XBooster" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardXBoosterStructure#StandardXBooster_CDRComparisonOutputStructure"/>
-    <add key="ClearVoice" value="StandardConfigurationStructure#StandardLoggingStructure#StandardTransactionStructure#StandardClearVoiceStructure#StandardClearVoiceStructureBI"/>
-    <add key="CDRAnalysis" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardCDRAnalysisStructure"/>
+    <add key="XBooster" value="StandardXBoosterStructure#StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardXBooster_CDRComparisonOutputStructure"/>
+    <add key="ClearVoice" value="StandardClearVoiceStructure#StandardConfigurationStructure#StandardLoggingStructure#StandardTransactionStructure#StandardClearVoiceStructureBI"/>
+    <add key="CDRAnalysis" value="StandardCDRAnalysisStructure#StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure"/>
     <add key="TOne.Web.Online" value="WebAPI"/>
     <add key="TOne" value="StandardDevelopmentStructure"/>
+    
     <add key="sqlFilesOutputPath" value="\\192.168.110.185\Fixes\WebSite\{2}\{0}\DataBaseFirstDeploymentScripts\{1}"/>
     <add key="javascriptsOutputPath" value="\\192.168.110.185\Fixes\WebSite\{2}\{0}\Client\{1}"/>
   </appSettings>
