Update Rule Migration Group Commission and Tariff
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43689

--- a/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Business/TOne.WhS.DBSync.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Business/TOne.WhS.DBSync.Business.csproj
@@ -148,7 +148,7 @@
     <Compile Include="DBSyncTaskAction.cs" />
     <Compile Include="DBSyncTaskActionArgument.cs" />
     <Compile Include="Migrators\Rules\RouteBlockRuleMigrator.cs" />
-    <Compile Include="SaleEntityRoutingProductMigrator.cs" />
+    <Compile Include="Migrators\SaleEntityRoutingProductMigrator.cs" />
     <Compile Include="SwitchMigration\ISwitchParser.cs" />
     <Compile Include="SwitchMigration\IVSwitchMigrationParser.cs" />
     <Compile Include="SwitchMigration\MVTSSwitchMigrationParser.cs" />
