invoice generation process
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43693

--- a/Vanrise/Code/Vanrise.Invoice.Business/Vanrise.Invoice.Business.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Business/Vanrise.Invoice.Business.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Extensions\InvoiceTypeExtendedSettingsInfoContext.cs" />
     <Compile Include="InvoiceItemGroupingManager.cs" />
     <Compile Include="InvoiceItemManager.cs" />
+    <Compile Include="InvoiceGenerationDraftManager.cs" />
     <Compile Include="InvoiceManager.cs" />
     <Compile Include="InvoicePartnerFilter\NotAssignedPartnerToInvoiceSettingFilter.cs" />
     <Compile Include="InvoiceAccountManager.cs" />
