--- a/Vanrise/Code/Vanrise.Invoice.Data/Vanrise.Invoice.Data.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Data/Vanrise.Invoice.Data.csproj
@@ -46,6 +46,7 @@
     <Compile Include="IBillingPeriodInfoDataManager.cs" />
     <Compile Include="IDataManager.cs" />
     <Compile Include="IInvoiceDataManager.cs" />
+    <Compile Include="IInvoiceGenerationDraftDataManager.cs" />
     <Compile Include="IInvoiceItemDataManager.cs" />
     <Compile Include="IInvoiceAccountDataManager.cs" />
     <Compile Include="IInvoiceSequenceDataManager.cs" />
