--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -597,6 +597,8 @@
     <Content Include="WhS_BusinessEntity\Views\SalePricelist\SalePriceListChangeController.js" />
     <Content Include="WhS_BusinessEntity\Views\SalePricelist\SalePricelistManagementController.js" />
     <Content Include="WhS_BusinessEntity\Views\SalePricelist\SendSalePriceList.html" />
+    <Content Include="WhS_BusinessEntity\Views\SalePricelist\SendSalePricelistConfirmation.html" />
+    <Content Include="WhS_BusinessEntity\Views\SalePricelist\SendSalePricelistConfirmationController.js" />
     <Content Include="WhS_BusinessEntity\Views\SalePricelist\SendSalePriceListController.js" />
     <Content Include="WhS_BusinessEntity\Views\SaleService\SaleServiceManagement.html" />
     <Content Include="WhS_BusinessEntity\Views\SaleService\SaleServiceManagementController.js" />
