implementing rate plan preview
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43739

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
@@ -127,6 +127,8 @@
     <Compile Include="BusinessRules\Conditions\SPDefaultRPDoesNotExistCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ZoneCountryIsEndedAndZoneIsChangedCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ZoneIsPendingClosedAndChangedCondition.cs" />
+    <Compile Include="CarrierAccount\AffectedCarrierAccountFilterInRateChanges.cs" />
+    <Compile Include="CarrierAccount\AffectedCarrierAccountFilterInRPChanges.cs" />
     <Compile Include="CodeCompareManager.cs" />
     <Compile Include="Context\RatePlanContext.cs" />
     <Compile Include="Country\BulkActionApplicableToCountryContext.cs" />
